<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="chooseMusic" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:clickable="false" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Artist"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</LinearLayout>