package com.example.shengdong.hw;


import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.pressBack;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MainActivityTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void mainActivityTest() {
        ViewInteraction textView = onView(
                allOf(withId(R.id.title), withText("Tank"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.music_list),
                                        0),
                                0),
                        isDisplayed()));
        textView.check(matches(withText("Tank")));

        ViewInteraction textView2 = onView(
                allOf(withId(R.id.artist), withText("殫勸よう徨"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.music_list),
                                        0),
                                1),
                        isDisplayed()));
        textView2.check(matches(withText("殫勸よう徨")));

        ViewInteraction linearLayout = onView(
                allOf(childAtPosition(
                        withId(R.id.music_list),
                        0),
                        isDisplayed()));
        linearLayout.perform(click());


        ViewInteraction appCompatButton = onView(
                allOf(withId(R.id.play), withText("Play/Pause"), isDisplayed()));
        appCompatButton.perform(click());

        ViewInteraction appCompatButton2 = onView(
                allOf(withId(R.id.play), withText("Play/Pause"), isDisplayed()));
        appCompatButton2.perform(click());

        pressBack();

    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
